# Mop-548

./: CMakeCache.txt  CMakeLists.txt  README.md  revision.h.in.cmake
.git - Copy/: config  index  packed-refs  sourcetreeconfig.json
.git - Copy/refs/heads/: master
cmake/macros/: FindMySQL.cmake
dep/: CMakeLists.txt
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt  Event.h  Log_Category.cpp
dep/boost/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt
dep/mysqllite/mysys/: my_thr_init.c
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/threads/: CMakeLists.txt
dep/utf8cpp/: CMakeLists.txt
sql/UpdatesSQL/Access_requirement/: Open_Dungeons_ICC_HC.sql
sql/UpdatesSQL/Creature_Fix/: Creature_Addon.sql  Fix_Npc_WanderIsland.sql  Health_Mod.sql  Isle_Of_Giants.sql  Tex_Isla.sql  [Creature_5].sql
sql/UpdatesSQL/Date_Offi/: Implementation_Data_Official_WoW.sql
sql/UpdatesSQL/Fix_Loot/: Loot_Template_Chest.sql  [208431]Gameobject_loot_template_Quest_[29160].sql  [26734]Loot_Quest_Template.sql  fIX_Chest_isleofthunder.sql
sql/UpdatesSQL/Fix_Quest/: [32320]_Quest_Hijal.sql  (+4 more)
sql/base/: auth.sql  characters.sql
src/: CMakeLists.txt
src/LuaEngine/: CMakeLists.txt  CreatureMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  HookMgr.cpp  HookMgr.h  ItemMethods.h  LuaEngine.cpp  LuaEngine.h  LuaFunctions.cpp  PlayerMethods.h  UnitMethods.h  WorldObjectMethods.h
(+734 files in other folders)
